# Differentiator

./: CMakeLists.txt  Differentiator  README.md  main.cpp
Common/: data_types.h  err_codes.h  operators.h  variables.h
DifferentiatorUtils/: differentiator_utils.cpp  differentiator_utils.h
IOFiles/: diag_test.txt  tree_struct.txt  write_struct.txt  write_test.txt
ReadWriteUtils/: read_write_utils.cpp  read_write_utils.h
TestUtils/: test_utils.cpp  test_utils.h
TreeUtils/: Node.cpp  Node.h  Tree.cpp  Tree.h
